--- a/lw5/task2/package.json
+++ b/lw5/task2/package.json
@@ -4,8 +4,8 @@
   "description": "yeah",
   "main": "listing-store.js",
   "scripts": {
-    "minify-css": "minify listing-store.css build/listing-store.min.css",
-    "minify-js": "minify listing-store.js build/listing-store.min.js",
+    "minify-css": "uglifycss listing-store.css --output build/listing-store.min.css",
+    "minify-js": "uglifyjs listing-store.js -o build/listing-store.min.js",
     "copy-html": "copyfiles index.html build",
     "build": "npm-run-all copy-html minify-js minify-css"
   },
@@ -13,7 +13,8 @@
   "license": "ISC",
   "devDependencies": {
     "copyfiles": "^2.4.1",
-    "minify": "^7.0.1",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "uglify-js": "^3.13.8",
+    "uglifycss": "0.0.29"
   }
 }
