--- a/lw5/task2/package.json
+++ b/lw5/task2/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "copyfiles": "^2.4.1",
+    "jest": "^27.0.3",
     "npm-run-all": "^4.1.5",
     "uglify-js": "^3.13.8",
     "uglifycss": "0.0.29"
