--- a/lw6/Todo-app/package.json
+++ b/lw6/Todo-app/package.json
@@ -4,11 +4,19 @@
   "main": "index.html",
   "scripts": {
     "start": "parcel index.html --open",
-    "build": "parcel build index.html"
+    "minify-css": "uglifycss src/todo-app.css --output build/todo-app.min.css",
+    "minify-js": "uglifyjs src/todo-app.js -o build/todo-app.min.js",
+    "copy-html": "copyfiles index.html build",
+    "build": "npm-run-all copy-html minify-js minify-css"
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "7.2.0"
+    "@babel/core": "^7.2.0",
+    "@babel/preset-env": "^7.14.4",
+    "copyfiles": "^2.4.1",
+    "npm-run-all": "^4.1.5",
+    "uglify-js": "^3.13.8",
+    "uglifycss": "0.0.29"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
