--- a/lw6/Todo-app/package.json
+++ b/lw6/Todo-app/package.json
@@ -14,9 +14,14 @@
     "@babel/core": "^7.2.0",
     "@babel/preset-env": "^7.14.4",
     "copyfiles": "^2.4.1",
+    "mini-css-extract-plugin": "^1.6.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.3.0",
+    "postcss-loader": "^5.3.0",
     "uglify-js": "^3.13.8",
-    "uglifycss": "0.0.29"
+    "uglifycss": "0.0.29",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0"
   },
   "resolutions": {
     "@babel/preset-env": "7.13.8"
