--- a/lw5/task2/package.json
+++ b/lw5/task2/package.json
@@ -4,10 +4,11 @@
   "description": "yeah",
   "main": "listing-store.js",
   "scripts": {
+    "test": "jest",
     "minify-css": "uglifycss listing-store.css --output build/listing-store.min.css",
     "minify-js": "uglifyjs listing-store.js -o build/listing-store.min.js",
     "copy-html": "copyfiles index.html build",
-    "build": "npm-run-all copy-html minify-js minify-css"
+    "build": "npm-run-all test copy-html minify-js minify-css"
   },
   "author": "Sofronov Michail",
   "license": "ISC",
