--- a/lw5/task2/package.json
+++ b/lw5/task2/package.json
@@ -13,6 +13,10 @@
   "author": "Sofronov Michail",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.0",
+    "@babel/preset-env": "^7.14.4",
+    "babel-jest": "^27.0.2",
     "copyfiles": "^2.4.1",
     "jest": "^27.0.3",
     "npm-run-all": "^4.1.5",
