--- a/lw6/Todo-app/package.json
+++ b/lw6/Todo-app/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todo-app",
   "version": "1.0.0",
-  "main": "index.html",
+  "main": "todo-app.js",
   "scripts": {
     "start": "parcel index.html --open",
     "build": "webpack --config webpack.config.js"
@@ -12,6 +12,7 @@
     "@babel/preset-env": "^7.14.4",
     "babel-loader": "^8.2.2",
     "html-webpack-plugin": "^5.3.1",
+    "jest": "^27.0.4",
     "mini-css-extract-plugin": "^1.6.0",
     "postcss": "^8.3.0",
     "postcss-loader": "^5.3.0",
@@ -20,11 +21,15 @@
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
   },
-  "resolutions": {
-    "@babel/preset-env": "7.13.8"
-  },
   "keywords": [
     "javascript",
     "starter"
+  ],
+  "browserslist": [
+    "> .5% and last 2 versions",
+    "not dead",
+    "not OperaMini all",
+    "ie >= 11",
+    "Edge >= 12"
   ]
 }
