--- a/lw6/Todo-app/package.json
+++ b/lw6/Todo-app/package.json
@@ -3,17 +3,22 @@
   "version": "1.0.0",
   "main": "todo-app.js",
   "scripts": {
+    "dev": "webpack --config webpack.config.js",
     "start": "parcel index.html --open",
-    "build": "webpack --config webpack.config.js"
+    "test": "jest",
+    "build": "npm-run-all test dev"
   },
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.2.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.14.5",
     "@babel/preset-env": "^7.14.4",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.1",
     "jest": "^27.0.4",
     "mini-css-extract-plugin": "^1.6.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.3.0",
     "postcss-loader": "^5.3.0",
     "postcss-preset-env": "^6.7.0",
