Fix some problems

--- a/lw6/Todo-app/package.json
+++ b/lw6/Todo-app/package.json
@@ -32,9 +32,6 @@
   ],
   "browserslist": [
     "> .5% and last 2 versions",
-    "not dead",
-    "not OperaMini all",
-    "ie >= 11",
-    "Edge >= 12"
+    "not dead"
   ]
 }
